<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <View style="@style/SpacerW5" />
    <EditText android:id="@+id/edit_work"
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:gravity="right"
        android:text="@string/work_dflt" />
    <View style="@style/SpacerW1" />
    <TextView
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_height="wrap_content"
        android:text="@string/work_time"
        android:textSize="18sp"
        />
</LinearLayout>    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <View style="@style/SpacerW5" />
    <EditText android:id="@+id/edit_break"
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:gravity="right"
        android:text="@string/break_dflt" />
    <View style="@style/SpacerW1" />
    <TextView
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_height="wrap_content"
        android:text="@string/break_time"
        android:textSize="18sp"
        />
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <View style="@style/SpacerW5" />
    <EditText android:id="@+id/edit_rest"
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:gravity="right"
        android:text="@string/rest_dflt" />
    <View style="@style/SpacerW1" />
    <TextView
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_height="wrap_content"
        android:text="@string/rest_time"
        android:textSize="18sp"
        />
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <View style="@style/SpacerW5" />
    <EditText android:id="@+id/edit_intv"
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:gravity="right"
        android:text="@string/intv_dflt" />
    <View style="@style/SpacerW1" />
    <TextView
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_height="wrap_content"
        android:text="@string/num_intv"
        android:textSize="18sp"
        />
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <View style="@style/SpacerW5" />
    <EditText android:id="@+id/edit_block"
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:gravity="right"
        android:text="@string/block_dflt" />
    <View style="@style/SpacerW1" />
    <TextView
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_height="wrap_content"
        android:text="@string/num_block"
        android:textSize="18sp"
        />
</LinearLayout>
<!--
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <CheckBox android:id="@+id/check_wake"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:checked="true" />
    <TextView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/keep_awake"
        android:textSize="18sp"
        />
</LinearLayout>
 -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
	<TextView 
    	android:layout_width="0dp"
    	android:layout_weight="10"
    	android:layout_height="wrap_content"
    	android:text="@string/hiit_time_str"
    	android:gravity="right"
    	android:textSize="24sp"
    />
    <View style="@style/SpacerW1" />
	<TextView 
    	android:layout_width="0dp"
    	android:layout_weight="10"
    	android:layout_height="wrap_content"
    	android:text="@string/zero_string"
    	android:id="@+id/hiit_time"
    	android:gravity="left"
    	android:textSize="24sp"
    />
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <View style="@style/SpacerW1" />
    <Button android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:onClick="hiitRun"
        android:text="@string/go_string"
        android:textSize="48sp"
        android:background="@drawable/btn_green"
        style="@style/FolkertButtonText"
        />
    <View style="@style/SpacerW1" />
</LinearLayout>

<View style="@style/Spacer" />
<View style="@style/Spacer" />
<View style="@style/Divider" />
<View style="@style/Spacer" />
<View style="@style/Spacer" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <EditText android:id="@+id/edit_sName"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/saveAs_string" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <Button
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:onClick="saveButton"
        	android:text="@string/save_string"
        	android:textSize="18sp"
        	android:background="@drawable/btn_blue"
        	style="@style/FolkertButtonText"
        	/>
        </LinearLayout>
</LinearLayout>

<View style="@style/Spacer" />
<View style="@style/Spacer" />
<View style="@style/Divider" />
<View style="@style/Spacer" />
<View style="@style/Spacer" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <Spinner
        android:id="@+id/spin_lName"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    	<Button
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:onClick="loadButton"
        	android:text="@string/load_string"
        	android:textSize="18sp"
        	android:background="@drawable/btn_blue"
        	style="@style/FolkertButtonText"
			/>
		<View style="@style/Spacer" />
    	<Button
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:onClick="delButton"
        	android:text="@string/del_string"
        	android:textSize="18sp"
        	android:background="@drawable/btn_yellow"
        	style="@style/FolkertButtonText"
        	/>
	</LinearLayout>
</LinearLayout>

</LinearLayout>